--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,78 @@
 html{
-  font-family: helvetica;
   font-size: 18px;
 }
+body{
+  font-family: Helvetica;
+
+}
+div{border: 1px solid blue;}
+/* Header Section */
+header{
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  color: white;
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+
+}
+.logo{
+  display: flex;
+  align-items: center;
+  width: 960px;
+
+}
+.logo img{
+  height: 1.5rem;
+  margin: auto 1rem auto .5rem;
+
+}
+.logo span{
+  margin: 0.66rem 0;
+
+}
+/* New Arrival Content */
+.container{
+  display: flex;
+  flex-direction: column;
+  padding-top: 2.32rem;
+
+}
+.mainCont{
+  background-image: url("../media/moto.jpeg");
+  height: 25rem;
+  background-size: cover;
+  background-position: center;
+  justify-content: center;
+
+}
+.maincHold{
+  width: 960px;
+  margin: 0 auto;
+  padding-top: 9rem;
+
+}
+.newarrival{
+  background-color: black;
+  color: white;
+  width: 20rem;
+  padding: 2rem 3rem;
+
+}
+.newarrival h1{
+  font-size: 2rem;
+  padding: .25rem 0;
+  font-weight: bold;
+
+}
+.newarrival h2{
+  font-size: 1rem;
+  font-weight: bold;
+
+}
+/* Nav Bar */
+
+/* Item Section */
+
+/* Footer Section */
